--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+body {
+	width: 100%;
+	height: 100%;
+	color: rgb(0, 0, 0);
+	background-color: #2a99af;
+	font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-img-top{
+	margin-top: 50px;
+	width: 390px;
+	height: 200px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.abc{
+	margin-top: 90px;
+	margin-left: 50px;
+	width: 90%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ull{
+	margin-top: 30px;
+	margin-left: 50px;
+	width: 90%;
+	list-style: none;
+	padding: 30px;
 }
